# genapi

./: .gitignore  README.md  demo.MD
agent/: README.md  main.py  pyproject.toml  setup.sh
agent-ui/: README.md  next.config.ts  package-lock.json  package.json
agent-ui/app/: layout.tsx  page.tsx
agent-ui/app/components/: ChatInterface.tsx
agent/apim_generator/: agent.py  prompt.py
agent/apim_generator/subagents/api_builder/: __init__.py  agent.py  prompt.py
agent/apim_generator/subagents/api_commiter/: agent.py  prompt.py
agent/apim_generator/subagents/api_designer/: __init__.py  agent.py  prompt.py
agent/apim_generator/subagents/api_tester/: __init__.py  agent.py  prompt.py
agent/config/: settings.py
cf-sync-api-specs/: main.py  requirements.txt
